# alyosha-ai

./: .gitignore
.docker/minio-data/.minio.sys/: format.json
.docker/minio-data/.minio.sys/tmp/.trash/042f7097-eb74-4d90-a8a7-ed814d6afc83/: xl.meta.bkp
.docker/minio-data/.minio.sys/tmp/.trash/2b3e531a-e6e8-45aa-9aeb-ca26d49ff4b1/: xl.meta.bkp
.docker/rabbitmq/: .erlang.cookie
.docker/rabbitmq/mnesia/rabbit@rabbitmq/: rabbit_durable_exchange.DCD  rabbit_durable_queue.DCD  rabbit_runtime_parameters.DCD  rabbit_user.DCD  rabbit_user_permission.DCD  rabbit_vhost.DCD
.docker/rabbitmq/mnesia/rabbit@rabbitmq/msg_stores/vhosts/628WB79CIFDYO9LJI6DKMI09L/msg_store_persistent/: file_summary.ets  msg_store_index.ets
.docker/rabbitmq/mnesia/rabbit@rabbitmq/msg_stores/vhosts/628WB79CIFDYO9LJI6DKMI09L/msg_store_transient/: file_summary.ets  msg_store_index.ets
ai-agents/ai-b2b-architect/: pyproject.toml
ai-agents/ai-b2b-architect/notebooks/: briefing_interview_agent.ipynb
ai-agents/ai-b2b-architect/prompts/: Introductory_questions.md
apps/: aes.py  pyproject.toml
apps/api/: container.py
apps/api/v1/routers/: __init__.py  llms_catalog.py  models_registry.py
apps/migrations/: env.py
apps/migrations/versions/: 2025_12_22_1612-9f49f1c44085_make_nullable_column.py
apps/modules/assistant/domain/: entities.py  value_objects.py
apps/modules/chat/domain/: entities.py  value_objects.py
apps/modules/chat/infrastructure/database/: models.py
apps/modules/llm_catalog/application/: __init__.py  repository.py  usecases.py
apps/modules/llm_catalog/domain/: __init__.py  commands.py  entities.py  primitives.py  value_objects.py
apps/modules/llm_catalog/infrastructure/: container.py
apps/modules/llm_catalog/infrastructure/database/: __init__.py  models.py  repository.py
apps/modules/models_registry/application/: repository.py
apps/modules/models_registry/domain/: commands.py  entities.py  value_objects.py
apps/modules/secrets/: utils.py
apps/modules/secrets/application/: dto.py  repository.py  services.py
apps/modules/secrets/domain/: __init__.py  commands.py  entities.py  exceptions.py  value_objects.py
apps/modules/secrets/infrastructure/database/: models.py
apps/modules/shared_kernel/domain/: __init__.py  entities.py
apps/modules/shared_kernel/insrastructure/database/: base.py
apps/modules/workspaces/infrastructure/: container.py
docs/: ROADMAP.md
experimental/: test.py
prototypes/corp-assistant/: .env.example  Dockerfile  add_docs.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements-prod.txt  test.py
prototypes/corp-assistant/.chroma/: chroma.sqlite3
prototypes/corp-assistant/migrations/versions/: 1c0a2c44d96f_add_new_columns_in_task.py  94b359b8e7c4_make_field_nullable.py
prototypes/corp-assistant/prompts/: meeting_minutes_prompt.md  system_prompt.md
prototypes/corp-assistant/src/: ai_agent.py  api.py  bot.py  broker.py  keyboards.py  rag.py  service.py  settings.py  storage.py  utils.py
prototypes/corp-assistant/src/ai_agents/: assistant.py  minutes_of_meeting_compiler.py  tools.py
prototypes/corp-assistant/src/bot/: bot.py
prototypes/corp-assistant/src/core/: enums.py  events.py  exceptions.py  schemas.py
prototypes/corp-assistant/src/database/: crud.py  models.py
prototypes/corp-assistant/src/handlers/: __init__.py  admin.py  chat.py  minutes.py  start.py
prototypes/corp-assistant/src/integrations/: salute_speech.py  sber_devices.py
prototypes/corp-assistant/src/services/: media.py  minutes.py  minutes_of_meetings.py  users.py
prototypes/corp-assistant/static/: main.html  new.html  prototype.html  script.js  style.css
services/knowledge-graph/: main.py  pyproject.toml  ДИО_Алёша_AI.md  НИР_Косов Андрей Сергеевич.docx  НИР_Косов Андрей Сергеевич.md
services/knowledge-graph/src/core/: __init__.py  enums.py  models.py
