[project]
name = "apps"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiobotocore>=2.25.1",
    "aiofiles>=25.1.0",
    "aiopath>=0.7.7",
    "aiosmtplib>=5.0.0",
    "alembic>=1.17.1",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "dishka>=1.7.2",
    "fastapi[all]>=0.120.4",
    "fastmcp>=2.13.3",
    "faststream[rabbit]>=0.6.3",
    "filetype>=1.2.0",
    "langchain>=1.0.5",
    "langchain-openai>=1.1.6",
    "langchain-text-splitters>=1.0.0",
    "mawo-pymorphy3>=1.0.4",
    "mutagen>=1.47.0",
    "mypy>=1.18.2",
    "nltk>=3.9.2",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "pedalboard>=0.9.19",
    "pydantic>=2.12.3",
    "pyjwt>=2.10.1",
    "pytest>=9.0.1",
    "python-ffmpeg>=2.0.12",
    "pytz>=2025.2",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "ruff>=0.14.3",
    "scikit-learn>=1.7.2",
    "soundfile>=0.13.1",
    "spacy>=3.8.11",
    "sqlalchemy>=2.0.44",
    "tinytag>=2.1.2",
]

[tool.ruff]
line-length = 99
preview = true
exclude = [
    "migrations",
    "migration",
    "src/migrations",
    "alembic.ini",
    "**/__pycache__",
    "**/.mypy_cache",
    "**/.ruff_cache",
    "**/.venv"
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "YTT",
    "ASYNC",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "EXE",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "INT",
    "ARG",
    "TD",
    "FIX",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "AIR",
    "PERF",
    "FURB",
    "LOG",
    "RUF",
]
ignore = [
    "S105",
    "S101",
    "B008",
    "TRY201",
    "PLW3201",
    "N805",
    "PTH",
    "COM812",
    "ISC001",
    "TRY003",
    "PT013",
    "TID252",
    "RUF001",
    "RUF002",
    "RUF003",
    "ASYNC109",
]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "typings",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"typings" = ['typing']

[tool.ruff.lint.pylint]
max-args = 15
max-returns = 10
max-branches = 30

# -- MyPy --
[tool.mypy]
ignore_missing_imports = true
exclude = [
    "src/migration",
    "src/migrations",
    "__samples__",
    ".venv"
]

# -- Vulture --
[tool.vulture]
exclude = [
    ".vscode/",
    "__samples__/",
    "tests",
    ".venv"
]
ignore_names = [
    "post",
    "put",
    "delete",
    "head"
]

# Pytest
[tool.pytest.ini_options]
testpaths = "tests"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
    "--tb=short",
    "--color=yes"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "functional: Functional tests",
    "slow: Slow running tests",
    "db: Database tests",
    "async: Async tests"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError"
]
